# entry/routes/api.php
@@ -5,4 +5,5 @@ declare(strict_types=1);
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Auth\AuthController;
 
-Route::post('/login', [AuthController::class, 'login'])->name('auth.login');
+Route::post('/login', [AuthController::class, 'loginUser'])->name('auth.login');
+Route::post('/register', [AuthController::class, 'registerUser'])->name('auth.register');
